-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.13.2
-
3929917ecb6fff0745dfa7f289993c9b79517945 (qt-creator/qt-creator/4.14)
With the attached stm32f769i-discovery-baremetal.json file in the kits directory of a Qt for MCUs installation, Qt Creator crashes when "Create Kit" is pressed.
000000b2`564f0b90 00007ffa`142a6f2c McuSupportd!McuSupport::Internal::McuToolChainPackage::isDesktopToolchain(void)+0xe [C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\plugins\mcusupport\mcusupportoptions.cpp @ 254] 000000b2`564f0bb0 00007ffa`142af439 McuSupportd!McuSupport::Internal::setKitProperties(class QString * kitName = 0x000000b2`564f0e10, class ProjectExplorer::Kit * k = 0x00000290`25dbd3d0, class McuSupport::Internal::McuTarget * mcuTarget = 0x00000290`26e7bc10)+0x39c [C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\plugins\mcusupport\mcusupportoptions.cpp @ 523] 000000b2`564f0dd0 00007ffa`142abb70 McuSupportd!<lambda_a500637b310817319c4c22082a7b780a>::operator()(class ProjectExplorer::Kit * k = 0x00000290`25dbd3d0)+0x79 [C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\plugins\mcusupport\mcusupportoptions.cpp @ 701] 000000b2`564f0e60 00007ffa`142a8edd McuSupportd!std::invoke<<lambda_a500637b310817319c4c22082a7b780a> &,ProjectExplorer::Kit *>(class McuSupport::Internal::McuSupportOptions::newKit::__l2::<lambda_a500637b310817319c4c22082a7b780a> * _Obj = 0x000000b2`564f1028, class ProjectExplorer::Kit ** _Arg1 = 0x000000b2`564f0f48)+0x20 [C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.27.29110\include\type_traits @ 1626] 000000b2`564f0e90 00007ffa`142afca9 McuSupportd!std::_Invoker_ret<void,1>::_Call<<lambda_a500637b310817319c4c22082a7b780a> &,ProjectExplorer::Kit *>(class McuSupport::Internal::McuSupportOptions::newKit::__l2::<lambda_a500637b310817319c4c22082a7b780a> * <_Vals_0> = 0x000000b2`564f1028, class ProjectExplorer::Kit ** <_Vals_1> = 0x000000b2`564f0f48)+0x1d [C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.27.29110\include\type_traits @ 1641] 000000b2`564f0ec0 00007ffa`192d0cd1 McuSupportd!std::_Func_impl_no_alloc<<lambda_a500637b310817319c4c22082a7b780a>,void,ProjectExplorer::Kit *>::_Do_call(class ProjectExplorer::Kit ** <_Args_0> = 0x000000b2`564f0f48)+0x29 [C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.27.29110\include\functional @ 904] 000000b2`564f0ef0 00007ffa`192b9c45 ProjectExplorerd!std::_Func_class<void,ProjectExplorer::Kit *>::operator()(class ProjectExplorer::Kit * <_Args_0> = 0x00000290`25dbd3d0)+0x61 [C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.27.29110\include\functional @ 952] 000000b2`564f0f40 00007ffa`142a5e5b ProjectExplorerd!ProjectExplorer::KitManager::registerKit(class std::function<void __cdecl(ProjectExplorer::Kit *)> * init = 0x000000b2`564f1020 {...}, class Utils::Id id = class Utils::Id)+0xd5 [C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\plugins\projectexplorer\kitmanager.cpp @ 618] 000000b2`564f0fb0 00007ffa`142b8c2b McuSupportd!McuSupport::Internal::McuSupportOptions::newKit(class McuSupport::Internal::McuTarget * mcuTarget = 0x00000290`26e7bc10, class McuSupport::Internal::McuPackage * qtForMCUsSdk = 0x00000290`266fa720)+0xab [C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\plugins\mcusupport\mcusupportoptions.cpp @ 713] 000000b2`564f1090 00007ffa`142b9478 McuSupportd!<lambda_8be34cef94e129e6333f9ef61ddae5f2>::operator()(void)+0x3b [C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\plugins\mcusupport\mcusupportoptionspage.cpp @ 140] 000000b2`564f10d0 00007ffa`142b7b82 McuSupportd!QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,<lambda_8be34cef94e129e6333f9ef61ddae5f2> >::call(class McuSupport::Internal::McuSupportOptionsWidget::{ctor}::__l7::<lambda_8be34cef94e129e6333f9ef61ddae5f2> * f = 0x00000290`25cfd230, void ** arg = 0x000000b2`564f1470)+0x18 [C:\Qt\5.15.1\msvc2019_64\include\QtCore\qobjectdefs_impl.h @ 146] 000000b2`564f1110 00007ffa`142b983d McuSupportd!QtPrivate::Functor<<lambda_8be34cef94e129e6333f9ef61ddae5f2>,0>::call<QtPrivate::List<>,void>(class McuSupport::Internal::McuSupportOptionsWidget::{ctor}::__l7::<lambda_8be34cef94e129e6333f9ef61ddae5f2> * f = 0x00000290`25cfd230, void * __formal = 0x00000290`25fcf710, void ** arg = 0x000000b2`564f1470)+0x22 [C:\Qt\5.15.1\msvc2019_64\include\QtCore\qobjectdefs_impl.h @ 257] 000000b2`564f1140 00007ffa`1f226d72 McuSupportd!QtPrivate::QFunctorSlotObject<<lambda_8be34cef94e129e6333f9ef61ddae5f2>,0,QtPrivate::List<>,void>::impl(int which = 0n1, class QtPrivate::QSlotObjectBase * this_ = 0x00000290`25cfd220, class QObject * r = 0x00000290`25fcf710, void ** a = 0x000000b2`564f1470, bool * ret = 0x00000000`00000000)+0x7d [C:\Qt\5.15.1\msvc2019_64\include\QtCore\qobjectdefs_impl.h @ 449] 000000b2`564f1190 00007ffa`1f27f628 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4c6229 000000b2`564f11e0 00007ffa`1f26bf57 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x51eadf 000000b2`564f1410 00007ffa`1cb3de02 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x50b40e 000000b2`564f1450 00007ffa`1cb40094 Qt5Widgetsd!QComboBox::insertSeparator+0x22a26c 000000b2`564f1490 00007ffa`1cb3efd4 Qt5Widgetsd!QComboBox::insertSeparator+0x22c4fe 000000b2`564f1500 00007ffa`1cb3e5f1 Qt5Widgetsd!QComboBox::insertSeparator+0x22b43e 000000b2`564f1550 00007ffa`1c9c1f2f Qt5Widgetsd!QComboBox::insertSeparator+0x22aa5b 000000b2`564f15a0 00007ffa`1cb3e052 Qt5Widgetsd!QComboBox::insertSeparator+0xae399 000000b2`564f1a30 00007ffa`1cc709c8 Qt5Widgetsd!QComboBox::insertSeparator+0x22a4bc 000000b2`564f1a80 00007ffa`1c961677 Qt5Widgetsd!QComboBox::insertSeparator+0x35ce32 000000b2`564f1ad0 00007ffa`1c95c205 Qt5Widgetsd!QComboBox::insertSeparator+0x4dae1 000000b2`564f1b30 00007ffa`1f20cc1f Qt5Widgetsd!QComboBox::insertSeparator+0x4866f 000000b2`564f2840 00007ffa`1f20cabb Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4ac0d6 000000b2`564f28c0 00007ffa`1c963f12 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4abf72 000000b2`564f28f0 00007ffa`1ca13bc6 Qt5Widgetsd!QComboBox::insertSeparator+0x5037c 000000b2`564f2a30 00007ffa`1ca11da4 Qt5Widgetsd!QComboBox::insertSeparator+0x100030 000000b2`564f30b0 00007ffa`1c961677 Qt5Widgetsd!QComboBox::insertSeparator+0xfe20e 000000b2`564f3160 00007ffa`1c95b918 Qt5Widgetsd!QComboBox::insertSeparator+0x4dae1 000000b2`564f31c0 00007ffa`1f20cc1f Qt5Widgetsd!QComboBox::insertSeparator+0x47d82 000000b2`564f3ed0 00007ffa`1f20cabb Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4ac0d6 000000b2`564f3f50 00007ffa`1ddba7bb Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4abf72 000000b2`564f3f80 00007ffa`1ddbdcd6 Qt5Guid!QColor::setHsvF+0xde350 000000b2`564f44e0 00007ffa`1dd87de2 Qt5Guid!QColor::setHsvF+0xe186b 000000b2`564f4580 00007ffa`1b81c792 Qt5Guid!QColor::setHsvF+0xab977 000000b2`564f4600 00007ffa`1f2e0632 qwindowsd!qt_plugin_instance+0x113bff 000000b2`564f4630 00007ffa`1b81c744 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x57fae9 000000b2`564f77e0 00007ffa`1f20750b qwindowsd!qt_plugin_instance+0x113bb1 000000b2`564f7820 00007ffa`1f207774 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4a69c2 000000b2`564f7870 00007ffa`1cd3e6af Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4a6c2b 000000b2`564f7930 00007ffa`1a0f66ab Qt5Widgetsd!QComboBox::insertSeparator+0x42ab19 000000b2`564f7a10 00007ffa`1a0f42b8 Cored!Core::Internal::SettingsDialog::execDialog(void)+0x22b [C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\plugins\coreplugin\dialogs\settingsdialog.cpp @ 756] 000000b2`564f7bd0 00007ffa`19f471cf Cored!Core::Internal::executeSettingsDialog(class QWidget * parent = 0x00000290`1dd12be0, class Utils::Id initialPage = class Utils::Id)+0xb8 [C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\plugins\coreplugin\dialogs\settingsdialog.cpp @ 789] 000000b2`564f7c30 00007ffa`19f75ab0 Cored!Core::ICore::showOptionsDialog(class Utils::Id page = class Utils::Id, class QWidget * parent = 0x00000000`00000000)+0x4f [C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\plugins\coreplugin\icore.cpp @ 269] 000000b2`564f7c80 00007ffa`19f78908 Cored!<lambda_7530b93132eb5704b1df7237bca48e2b>::operator()(void)+0x30 [C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\plugins\coreplugin\mainwindow.cpp @ 689] 000000b2`564f7cc0 00007ffa`19f70352 Cored!QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,<lambda_7530b93132eb5704b1df7237bca48e2b> >::call(class Core::Internal::MainWindow::registerDefaultActions::__l2::<lambda_7530b93132eb5704b1df7237bca48e2b> * f = 0x00000290`1de8ef00, void ** arg = 0x000000b2`564f8060)+0x18 [C:\Qt\5.15.1\msvc2019_64\include\QtCore\qobjectdefs_impl.h @ 146] 000000b2`564f7d00 00007ffa`19f798ed Cored!QtPrivate::Functor<<lambda_7530b93132eb5704b1df7237bca48e2b>,0>::call<QtPrivate::List<>,void>(class Core::Internal::MainWindow::registerDefaultActions::__l2::<lambda_7530b93132eb5704b1df7237bca48e2b> * f = 0x00000290`1de8ef00, void * __formal = 0x00000290`1dd12be0, void ** arg = 0x000000b2`564f8060)+0x22 [C:\Qt\5.15.1\msvc2019_64\include\QtCore\qobjectdefs_impl.h @ 257] 000000b2`564f7d30 00007ffa`1f226d72 Cored!QtPrivate::QFunctorSlotObject<<lambda_7530b93132eb5704b1df7237bca48e2b>,0,QtPrivate::List<>,void>::impl(int which = 0n1, class QtPrivate::QSlotObjectBase * this_ = 0x00000290`1de8eef0, class QObject * r = 0x00000290`1dd12be0, void ** a = 0x000000b2`564f8060, bool * ret = 0x00000000`00000000)+0x7d [C:\Qt\5.15.1\msvc2019_64\include\QtCore\qobjectdefs_impl.h @ 449] 000000b2`564f7d80 00007ffa`1f27f628 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4c6229 000000b2`564f7dd0 00007ffa`1f26bf57 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x51eadf 000000b2`564f8000 00007ffa`1c937d42 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x50b40e 000000b2`564f8040 00007ffa`1da0107b Qt5Widgetsd!QComboBox::insertSeparator+0x241ac 000000b2`564f8080 00007ffa`1da008e7 Utilsd!QtPrivate::FunctorCall<QtPrivate::IndexesList<0>,QtPrivate::List<bool>,void,void (<function> * f = 0x00007ffa`1c8fe651, class QAction * o = 0x00000290`1de8d3f0, void ** arg = 0x000000b2`564f8420)+0x3b [C:\Qt\5.15.1\msvc2019_64\include\QtCore\qobjectdefs_impl.h @ 152] 000000b2`564f80c0 00007ffa`1da01241 Utilsd!QtPrivate::FunctionPointer<void (<function> * f = 0x00007ffa`1c8fe651, class QAction * o = 0x00000290`1de8d3f0, void ** arg = 0x000000b2`564f8420)+0x27 [C:\Qt\5.15.1\msvc2019_64\include\QtCore\qobjectdefs_impl.h @ 186] 000000b2`564f80f0 00007ffa`1f226d72 Utilsd!QtPrivate::QSlotObject<void (int which = 0n1, class QtPrivate::QSlotObjectBase * this_ = 0x00000290`1de8e720, class QObject * r = 0x00000290`1de8d3f0, void ** a = 0x000000b2`564f8420, bool * ret = 0x00000000`00000000)+0x81 [C:\Qt\5.15.1\msvc2019_64\include\QtCore\qobjectdefs_impl.h @ 419] 000000b2`564f8140 00007ffa`1f27f628 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4c6229 000000b2`564f8190 00007ffa`1f26bf57 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x51eadf 000000b2`564f83c0 00007ffa`1c937d42 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x50b40e 000000b2`564f8400 00007ffa`1c937059 Qt5Widgetsd!QComboBox::insertSeparator+0x241ac 000000b2`564f8440 00007ffa`1cc555c3 Qt5Widgetsd!QComboBox::insertSeparator+0x234c3 000000b2`564f8490 00007ffa`1cc554a4 Qt5Widgetsd!QComboBox::insertSeparator+0x341a2d 000000b2`564f8500 00007ffa`1cc4a400 Qt5Widgetsd!QComboBox::insertSeparator+0x34190e 000000b2`564f85d0 00007ffa`1c9c1f2f Qt5Widgetsd!QComboBox::insertSeparator+0x33686a 000000b2`564f8620 00007ffa`1cc4cb99 Qt5Widgetsd!QComboBox::insertSeparator+0xae399 000000b2`564f8ab0 00007ffa`1c961677 Qt5Widgetsd!QComboBox::insertSeparator+0x339003 000000b2`564f8bb0 00007ffa`1c95c205 Qt5Widgetsd!QComboBox::insertSeparator+0x4dae1 000000b2`564f8c10 00007ffa`1f20cc1f Qt5Widgetsd!QComboBox::insertSeparator+0x4866f 000000b2`564f9920 00007ffa`1f20cabb Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4ac0d6 000000b2`564f99a0 00007ffa`1c963f12 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4abf72 000000b2`564f99d0 00007ffa`1ca12f4e Qt5Widgetsd!QComboBox::insertSeparator+0x5037c 000000b2`564f9b10 00007ffa`1ca11da4 Qt5Widgetsd!QComboBox::insertSeparator+0xff3b8 000000b2`564fa190 00007ffa`1c961677 Qt5Widgetsd!QComboBox::insertSeparator+0xfe20e 000000b2`564fa240 00007ffa`1c95b918 Qt5Widgetsd!QComboBox::insertSeparator+0x4dae1 000000b2`564fa2a0 00007ffa`1f20cc1f Qt5Widgetsd!QComboBox::insertSeparator+0x47d82 000000b2`564fafb0 00007ffa`1f20cabb Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4ac0d6 000000b2`564fb030 00007ffa`1ddba7bb Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4abf72 000000b2`564fb060 00007ffa`1ddbdcd6 Qt5Guid!QColor::setHsvF+0xde350 000000b2`564fb5c0 00007ffa`1dd87de2 Qt5Guid!QColor::setHsvF+0xe186b 000000b2`564fb660 00007ffa`1b81c792 Qt5Guid!QColor::setHsvF+0xab977 000000b2`564fb6e0 00007ffa`1f2e0632 qwindowsd!qt_plugin_instance+0x113bff 000000b2`564fb710 00007ffa`1b81c744 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x57fae9 000000b2`564fe8c0 00007ffa`1f20750b qwindowsd!qt_plugin_instance+0x113bb1 000000b2`564fe900 00007ffa`1f207774 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4a69c2 000000b2`564fe950 00007ffa`1f20aa89 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4a6c2b 000000b2`564fea10 00007ffa`1ddb63d8 Qt5Cored!QXmlStreamNamespaceDeclaration::prefix+0x4a9f40 000000b2`564fead0 00007ffa`1c95b3da Qt5Guid!QColor::setHsvF+0xd9f6d 000000b2`564feb00 00007ff6`63cfb1a9 Qt5Widgetsd!QComboBox::insertSeparator+0x47844 000000b2`564feb30 00007ff6`63d10af9 qtcreator!main(int argc = 0n8, char ** argv = 0x00000290`1712d0f0)+0x35b9 [C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\app\main.cpp @ 740] 000000b2`564ffa60 00007ff6`63d109de qtcreator!invoke_main(void)+0x39 [D:\agent\_work\9\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl @ 79] 000000b2`564ffab0 00007ff6`63d1089e qtcreator!__scrt_common_main_seh(void)+0x12e [D:\agent\_work\9\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl @ 288] 000000b2`564ffb20 00007ff6`63d10b89 qtcreator!__scrt_common_main(void)+0xe [D:\agent\_work\9\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl @ 331] 000000b2`564ffb50 00007ffa`7d247034 qtcreator!mainCRTStartup(void)+0x9 [D:\agent\_work\9\s\src\vctools\crt\vcstartup\src\startup\exe_main.cpp @ 17] 000000b2`564ffb80 00007ffa`7d85cec1 KERNEL32!BaseThreadInitThunk+0x14 000000b2`564ffbb0 00000000`00000000 ntdll!RtlUserThreadStart+0x21